--- a/assets/css/cck.css
+++ b/assets/css/cck.css
@@ -399,9 +399,15 @@
         min-height: 280px;
 	}
 
+	.cck-hero__media {
+        margin-top: 12px;
+	}
+
 	.cck-hero__media::before {
-        right: -10px;
-        bottom: -10px;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
 	}
 	.cck-trust__grid,
 	.cck-collection-grid__inner {
